--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">RecSysApp</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    
+    <string name="login_label_username">账户名</string>
+    <string name="login_username_hint">请输入账号</string>
+    <string name="login_label_password">密码</string>
+    <string name="login_label_signin">登录</string>
+    <string name="login_register_link"><b>没有账号？</b><a href="http://www.google.com">注册</a></string>
+    
+    <string name="main_tab">标签</string>
+    
 
 </resources>
