--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="main_tab2">最高收视</string>
     <string name="main_tab3">猜你喜欢</string>
     
+    <string name="detail_title">详细内容</string>
 
 </resources>
