--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="main_tab3">猜你喜欢</string>
     <string name="detail_title">详细内容</string>
     <string name="title_activity_doget">DogetActivity</string>
+    <string name="refresh">Refresh</string>
 
 </resources>
